--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <meta charset="utf-8">
 <style>
 
+    body {
+        font-family: Arial;
+    }
+
     .axis--x path {
         display: none;
     }
@@ -24,17 +28,18 @@
     }
 
 </style>
-<svg width="1024" height="920"></svg>
+
+<h3>First year in office stock market performance by President</h3>
+<svg width="1024" height="600"></svg>
+
 <script src="//d3js.org/d3.v4.min.js"></script>
 <script>
 
     var svg = d3.select("svg"),
-            margin = {top: 20, right: 80, bottom: 30, left: 50},
+            margin = {top: 20, right: 80, bottom: 50, left: 50},
             width = svg.attr("width") - margin.left - margin.right,
             height = svg.attr("height") - margin.top - margin.bottom,
             g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-    var parseTime = d3.timeParse("%Y%m%d");
 
     var x = d3.scaleLinear().range([0, width]),
             y = d3.scaleLinear().range([height, 0]);
@@ -49,6 +54,14 @@
             throw error;
         }
 
+        /**
+         * create an array like
+         *  [
+         *   {id:'Trump', values: [{date:0, change: 0}, ...] },
+         *   {id:'Obama', values: [{date:0, change: 0}, ...] },
+         *   ...
+         *  ]
+         */
         var presidents = data.columns.slice(1).map(function(id) {
             return {
                 id: id,
@@ -58,10 +71,12 @@
             };
         });
 
+        // specify max value for the x axis
         x.domain(d3.extent(data, function(d) {
             return parseInt(d.date);
         }));
 
+        // specify min and max value for y axis
         y.domain([
             d3.min(presidents, function(c) {
                 return d3.min(c.values, function(d) { return d.change; });
@@ -71,20 +86,29 @@
             })
         ]);
 
+        // add the x-axix
         g.append("g")
                 .attr("class", "axis axis--x")
                 .attr("transform", "translate(0," + height + ")")
                 .call(d3.axisBottom(x));
 
+        // text label for the x axis
+        g.append("text")
+                .attr("transform", "translate(" + (width/2) + "," + (height + margin.top + 20) + ")")
+                .style("text-anchor", "middle")
+                .text("Days of active stock market trading");
+
+        // add the y axis
         g.append("g")
                 .attr("class", "axis axis--y")
                 .call(d3.axisLeft(y))
                 .append("text")
-                .attr("transform", "rotate(-90)")
+                //.attr("transform", "rotate(-90)")
+                .attr("x", 175)
                 .attr("y", 6)
                 .attr("dy", "0.71em")
                 .attr("fill", "#000")
-                .text("Change");
+                .text("Dow Jones changes since taking office");
 
         // add the X gridlines
         g.append("g")
@@ -104,6 +128,7 @@
                     .tickFormat("")
             );
 
+        // add graph lines for each president
         var president = g.selectAll(".president")
                 .data(presidents)
                 .enter().append("g")
@@ -125,6 +150,7 @@
                             .style("stroke", (d.id == 'Trump') ? "red" : "lightgray");
                 });
 
+        // add president name
         president.append("text")
                 .datum(function(d) {
                     return {id: d.id, value: d.values[d.values.length - 1]};
@@ -133,8 +159,7 @@
                     return "translate(" + x(d.value.date) + "," + y(d.value.change) + ")";
                 })
                 .attr("x", 3)
-                .attr("dy", "0.35em")
-                .style("font", "10px sans-serif")
+                .style("font", "9px sans-serif")
                 .style("fill", function(d) {
                     return (d.id == 'Trump') ? 'red' : 'black';
                 })
@@ -144,8 +169,10 @@
     });
 
     function type(d, _, columns) {
-        //d.date = parseTime(d.date);
-        for (var i = 1, n = columns.length, c; i < n; ++i) d[c = columns[i]] = +d[c];
+        for (var i = 1, n = columns.length, c; i < n; ++i) {
+            c = columns[i];
+            d[c] = +d[c];
+        }
         return d;
     }
 
